Changes sorting direction on term edition form parent request. Solves overlapping css issue of autocomplete.

--- a/src/admin/scss/_dropdown-and-autocomplete.scss
+++ b/src/admin/scss/_dropdown-and-autocomplete.scss
@@ -26,6 +26,7 @@
         border-radius: 0px;
         min-width: 6rem;
         border: none;
+        z-index: 99;
         
         .dropdown-content {
             padding: 0px;
